--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
         <span class="video-answer-question" id="video-answer-question"></span>
         <div class="video-answer-wrapper">
           <video id="video-answer" muted></video>
-          <div class="video-answer-side no"><span>Nee</span></div>
-          <div class="video-answer-side yes"><span>Ja</span></div>
+          <div class="video-answer-side no" id="video-overlay-no">
+            <span>Nee</span>
+          </div>
+          <div class="video-answer-side yes" id="video-overlay-yes">
+            <span>Ja</span>
+          </div>
         </div>
         <div>
           <div class="go-button-wrapper">
             <div class="back button" id="back-button" name="back-button">
-              << Ask a new question
+              << Stel nieuwe vraag!
             </div>
           </div>
         </div>
