--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <script type="text/javascript" src="main.js"></script>
   </head>
@@ -46,7 +47,7 @@
             </div>
           </div>
           <p class="question-intro">Of... Stel een random vraag</p>
-          <div class="line">
+          <div class="line vspace">
             <div class="button" id="random-button" name="random-button">
               Verras me
             </div>
