--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="Laat de goudvis beslissen" />
+    <meta property="og:title" content="Beslis vis" />
+    <meta property="og:url" content="https://www.beslisvis.site" />
+    <meta property="og:description" content="Laat de goudvis beslissen" />
+    <meta property="og:image" content="/goldfish.png" />
+    <meta property="og:type" content="website" />
 
     <script type="text/javascript" src="main.js"></script>
   </head>
