Use absolute og:image path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Beslis vis" />
     <meta property="og:url" content="https://www.beslisvis.site" />
     <meta property="og:description" content="Laat de goudvis beslissen" />
-    <meta property="og:image" content="/goldfish.png" />
+    <meta property="og:image" content="https://beslisvis.site/goldfish.png" />
     <meta property="og:type" content="website" />
 
     <script type="text/javascript" src="main.js"></script>
