Additional status updates

--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
       <screen id="feeding">
         <span class="feeding-question" id="feeding-question"></span>
         <div class="search-wrapper">
-          <span class="search" id="s1">Vissenkom schoonmaken.</span>
-          <span class="search" id="s2">Vis zoeken..</span>
-          <span class="search" id="s3">Jouw vraag voeren...</span>
+          <span class="search opacity-fade05" id="s1"
+            >Vissenkom schoonmaken.</span
+          >
+          <span class="search opacity-fade05" id="s2">Vis zoeken..</span>
+          <span class="search opacity-fade05" id="s3"
+            >Jouw vraag voeren...</span
+          >
         </div>
       </screen>
       <screen id="answer">
@@ -77,10 +81,14 @@
           <div class="video-answer-side no" id="video-overlay-no">
             <span>Nee</span>
           </div>
+          <div class="video-answer-divider" id="video-overlay-divider"></div>
           <div class="video-answer-side yes" id="video-overlay-yes">
             <span>Ja</span>
           </div>
         </div>
+        <span id="video-answer-status" class="opacity-fade05"
+          >Verteren van de vraag, dit kost tijd...</span
+        >
         <div class="line" id="answer-navigate">
           <div class="button primary" id="back-button" name="back-button">
             << Stel nieuwe vraag!
